@@ -2,6 +2,10 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+14-Jul-2003
+~~~~~~~~~~~
+Less frame-heavy look for info box.
+
 13-Jul-2003
 ~~~~~~~~~~~
 Added sort and selection buttons to the toolbar.  They start off disabled,
